# FragSeal

./: .bazelrc  .gitattributes  .gitignore  BUILD  LICENSE  MODULE.bazel  Makefile  Package.resolved  Package.swift  README.md  WORKSPACE  compose.yml
.agents/skills/build-multi-platform-cli/: SKILL.md
.agents/skills/build-multi-platform-cli/agents/: openai.yaml
.agents/skills/commit-and-push/: SKILL.md
.agents/skills/commit-and-push/agents/: openai.yaml
.bis/: BUILD
.codex/: AGENTS.md
.github/workflows/: ci.yml  release.yml  update-lock.yml
.sourcekit-lsp/: config.json
FragSeal/: BUILD  FragSeal.swift  PassphraseReader.swift  Type+ExpressibleByArgument.swift
FragSealCliTests/: BUILD  cli_artifact_functional_test.sh
FragSealCore/: BUILD
FragSealCore/Backup/: BackupDownloader.swift  BackupUploader.swift
FragSealCore/FileSystem/: BUILD  DirectoryIteration.swift  FilePath+FileSystem.swift  FileWriter.swift
FragSealCore/FileSystem/include/: FileSystemInterop.hpp
FragSealCore/FragSealCrypto/: AeadCrypters.cpp  BUILD  CryptoCapabilities.cpp  FragSealCryptoOverlay.swift  LegacyAes128CbcCrypter.cpp  LegacyAes128CbcCrypterCommonCrypto.cpp  LegacyAes128CbcCrypterOpenSSL.cpp  OpenSSLRuntime.cpp  PBKDF2KeyDeriver.cpp  SHA256Hasher.cpp  SecureRandom.cpp
FragSealCore/FragSealCrypto/include/: Aes256GcmCrypter.hpp  ChaCha20Poly1305Crypter.hpp  CryptoCapabilities.hpp  FragSealCrypto.hpp  LegacyAes128CbcCrypter.hpp  PBKDF2KeyDeriver.hpp  SHA256Hasher.hpp  SecureRandom.hpp  SpanTypes.hpp
FragSealCore/FragSealCrypto/private/: CryptoBackendConfig.hpp  LegacyAes128CbcCrypterBackend.hpp  OpenSSLRuntime.hpp
FragSealCore/FragSealTomlCodec/: BUILD  FragSealTomlCodec.cpp  FragSealTomlCodecOverlay.swift
FragSealCore/FragSealTomlCodec/include/: BackupDescriptor.hpp  BackupManifest.hpp  ChunkDescriptor.hpp  EncryptionDescriptor.hpp  FragSealManifestModel.hpp  FragSealTomlCodec.hpp  ManifestOptionalString.hpp  StorageDescriptor.hpp
FragSealCore/Manifest/: ManifestModelSupport.swift
FragSealCore/Storage/: LocalObjectStorage.swift  ObjectStorage.swift  S3ObjectStorage.swift
FragSealCore/Support/: BinaryEncoding.swift  FragSealCoreExports.swift  Retry.swift
FragSealCore/Transfer/: ChunkCrypter.swift  ChunkDownloader.swift  ChunkUploader.swift
FragSealCoreTests/: BUILD  BackupFlowTests.swift  CryptoTests.swift  FileDescriptor+TestIO.swift  FileWriterTests.swift  LinuxTestMain.swift  ManifestTests.swift  RuntimeAvailabilityTests.swift  TestResources.swift
FragSealCoreTests/ObjC/: FragSealCryptoSwiftHeaderImportTest.mm
Scripts/: gen-fake-assets.sh  resolve-swift-include-root.sh  show-swift-interface.py  sourcekit-lsp.sh
Tools/Clang/: BUILD  clang_builtin_include_repository.bzl
Tools/Docker/: swift-linux.Dockerfile
Tools/OpenSSL/: BUILD  openssl_local_repository.bzl
Tools/Swift/: BUILD  generated_header.bzl  linux_swift_toolchain.bzl  mixed_clang_swift_module.bzl  swift_compatibility.bzl  swift_toolchain_include_repository.bzl
